--- a/app/src/main/res/layout/activity_clerkdashboard.xml
+++ b/app/src/main/res/layout/activity_clerkdashboard.xml
@@ -179,13 +179,51 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/updatePosition"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:layout_gravity="fill"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="8dp"
+            app:cardBackgroundColor="@color/teal_700"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="8dp"
+            android:layout_columnSpan="1">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_gravity="center_vertical|center_horizontal">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/baseline_business_center_24"
+                    app:tint="@color/white" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Update Position"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textAlignment="center"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+
         <!-- Third Grid Cell -->
         <androidx.cardview.widget.CardView
             android:id="@+id/logoutButton"
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_row="1"
-            android:layout_column="0"
+            android:layout_column="1"
             android:layout_gravity="fill"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
