--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -96,7 +96,7 @@
         android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="28dp"
-        android:background="@color/teal_200"
+        android:background="@drawable/green_rounded_button"
         android:text="Sign Up"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
