--- a/app/src/main/res/layout/activity_forgetpassword.xml
+++ b/app/src/main/res/layout/activity_forgetpassword.xml
@@ -13,7 +13,7 @@
         android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="24dp"
-        android:background="@color/teal_700"
+        android:background="@drawable/green_rounded_button"
         android:text="Forget password"
         android:textColor="@color/white"
         android:textStyle="bold"
@@ -83,8 +83,6 @@
         android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="24dp"
-        app:boxStrokeColor="@color/black"
-        app:hintTextColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,8 +105,6 @@
         android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="24dp"
-        app:boxStrokeColor="@color/black"
-        app:hintTextColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -124,5 +120,16 @@
             android:maxLength="12" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="If you didn't register for the IC. Please contact customer service. 01112896803"
+        android:textAllCaps="false"
+        android:textColor="#FF018786"
+        android:textSize="8sp"
+        app:layout_constraintStart_toStartOf="@+id/ICLayout"
+        app:layout_constraintTop_toBottomOf="@+id/ICLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
