--- a/app/src/main/res/layout/activity_viewhospital.xml
+++ b/app/src/main/res/layout/activity_viewhospital.xml
@@ -49,7 +49,7 @@
             android:layout_height="40dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:hint="Search illness name"
+            android:hint="Search hospital name"
             android:imeOptions="actionSearch"
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
