--- a/app/src/main/res/drawable/bordered_edittext.xml
+++ b/app/src/main/res/drawable/bordered_edittext.xml
@@ -4,7 +4,7 @@
             <solid android:color="@android:color/transparent" />
             <stroke
                 android:width="1dp"
-                android:color="@color/black" /> <!-- Set your desired border color here -->
+                android:color="?attr/colorOnSecondary" /> <!-- Set your desired border color here -->
         </shape>
     </item>
 </layer-list>
