--- a/app/src/main/res/layout/activity_addpdf.xml
+++ b/app/src/main/res/layout/activity_addpdf.xml
@@ -28,6 +28,39 @@
             />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <LinearLayout
+        android:id="@+id/chipGroupLayout"
+        android:layout_width="320dp"
+        android:layout_height="80dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/illnessLayout">
+        >
+
+        <TextView
+            android:id="@+id/allIllness"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="All Illness" />
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/chipGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></com.google.android.material.chip.ChipGroup>
+    </ScrollView>
+    </LinearLayout>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/medicineLayout"
         style="@style/LoginTextInputOuterFieldStyle"
@@ -38,7 +71,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/illnessLayout"
+        app:layout_constraintTop_toBottomOf="@id/chipGroupLayout"
         >
 
         <EditText
@@ -114,11 +147,13 @@
         style="@style/nightForIcon"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="28dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/baseline_picture_as_pdf_24" />
+
     <include
         android:id="@+id/include"
         layout="@layout/activity_footer" />
